--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,6 +2,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    height: 100vh;
 }
 
 .jumbotron {
@@ -17,4 +18,3 @@
 .jumbotron .btn {
      background-color: rgba(228, 225, 225, 0.404);
 }
-
