--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<app-header style="position: fixed; width: 100vw;"></app-header>
-<div class="container-fluid">
-  <router-outlet></router-outlet>
-</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
