--- a/src/app/menu/combos/combos.component.html
+++ b/src/app/menu/combos/combos.component.html
@@ -1,11 +1,13 @@
 <div class="row menu-row w-75 mx-auto">
     <div class="col-sm-12 col-md-6 col-lg-4 mb-3" *ngFor="let combo of combos">
-        <div class="card text-center pt-4 pr-2 pb-1 pl-2 h-100">
-            <img class="card-img-top" [src]="combo.imgUrl" alt="">
-            <div class="card-body">
-              <p class="card-text">{{ combo.name | uppercase }}</p>
-              <p class="mx-0 px-0">{{ combo.price }} Php</p>
+        <a [routerLink]="combo.id">
+            <div class="card text-center pt-4 pr-2 pb-1 pl-2 h-100">
+                <img class="card-img-top" [src]="combo.imgUrl" alt="">
+                <div class="card-body">
+                  <p class="card-text">{{ combo.name | uppercase }}</p>
+                  <p class="mx-0 px-0">{{ combo.price }} Php</p>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
 </div>
