--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
               <a class="nav-link" routerLink="drinks">DRINKS</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" routerLink="extras">ADD-ONS</a>
+              <a class="nav-link" routerLink="extras">EXTRAS</a>
             </li>
           </ul>
         </div>
