--- a/src/app/menu/extras/extras.component.html
+++ b/src/app/menu/extras/extras.component.html
@@ -1,10 +1,10 @@
 <div class="row menu-row w-75 mx-auto">
-    <div class="col-sm-12 col-md-6 col-lg-4 mb-3" *ngFor="let addOn of addOns">
+    <div class="col-sm-12 col-md-6 col-lg-4 mb-3" *ngFor="let extra of extras">
         <div class="card text-center pt-4 pr-2 pb-1 pl-2 h-100">
-            <img class="card-img-top" [src]="addOn.imgUrl" alt="">
+            <img class="card-img-top" [src]="extra.imgUrl" alt="">
             <div class="card-body">
-              <p class="card-text">{{ addOn.name | uppercase }}</p>
-              <p class="mx-0 px-0">{{ addOn.price }} Php</p>
+              <p class="card-text">{{ extra.name | uppercase }}</p>
+              <p class="mx-0 px-0">{{ extra.price }} Php</p>
             </div>
         </div>
     </div>
