--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,6 +27,12 @@
 
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
+          <a 
+            class="nav-link"
+            (click)="onLogoutOrLogin()">
+            {{ this.authService.isLoggedIn ? 'Logout' : 'Login' }}</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">Cart <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
