Add Toastr to Home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,8 @@
 <div class="container-fluid home-background" style="background-image: url('../assets/img/homeBg.jpeg');">
+    <div class="row h-25 mt-5" style="position: fixed; z-index: 1;">
+        <div class="col-xs-12 w-25 mt-3" toastContainer>
+        </div>
+    </div>
     <div class="row h-100">
         <div class="col-12 my-auto">
             <div class="jumbotron mx-auto" [ngClass]="jumbotronWidth" *ngIf="showDeliveryDetails === false">
