--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="menu-background container-fluid">
 
-    <div class="row">
+    <div class="row" style="width: 100vw;">
       <div class="col-12 mt-5 pt-4 mb-5">
         <div class="menu-nav">
           <ul class="nav nav-pills" [ngClass]="navJustifyCenter ? 'justify-content-center' : ''">
