--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -26,7 +26,22 @@ hr {
     background-color: rgba(31, 30, 30, 0.486);
 }
 
-button {
+.submit {
     background-color: rgba(232, 192, 73, 0.842);
     color: white;
+}
+
+.quantityWidget .btn {
+    border-radius: 0;
+    width: 35px;
+    height: 35px;
+    font-size: 15px;
+}
+
+.quantity {
+    width: 45px;
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    color: white;
+    text-align: center;
 }
