--- a/src/app/menu/combos/combo/combo.component.html
+++ b/src/app/menu/combos/combo/combo.component.html
@@ -57,7 +57,7 @@
                         type="number" 
                         readonly
                         id="quantity" 
-                        class="w-25 py-1 pb-2"
+                        class="py-1 pb-2"
                         min="1"
                         formControlName="quantity">
                     <button 
