--- a/src/app/menu/drinks/drink/drink.component.html
+++ b/src/app/menu/drinks/drink/drink.component.html
@@ -50,7 +50,7 @@
                         type="number" 
                         readonly
                         id="quantity" 
-                        class="w-25 py-1 pb-2"
+                        class="py-1 pb-2"
                         min="1"
                         formControlName="quantity">
                     <button 
