--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -4,8 +4,13 @@
         </div>
     </div>
     <div class="row mx-0 px-0">
-        <div class="col-xs-12 w-100 pt-5 mt-5">
-        <form [formGroup]="cartForm">
+        <div class="col-xs-12 w-100">
+            <div class="mt-5 pt-4 mx-3 mb-5" *ngIf="showDeliveryDetails"> 
+                <app-delivery-details
+                    (close)="onClose($event)">
+                </app-delivery-details>
+            </div>
+        <form [formGroup]="cartForm" *ngIf="!showDeliveryDetails" class="pt-5 mt-5">
             <div class="row" [ngClass]="cartMargin">
                 <div class="col-xs-12 col-md-7 col-lg-8"> 
                     <div 
@@ -20,19 +25,21 @@
                                     alt=""
                                     style="height: 150px; width: 150px;">
                                 <div class="media-body my-auto">
-                                    <p class="mt-0">{{ cartItem['name'] }}</p>
-                                    <p>{{ cartItem['extraInfo'] }}</p>
-                                    <p>{{ cartItem['specialInstructions']}}</p>
+                                    <p class="mt-0"><strong>{{ cartItem['name'] }}</strong></p>
+                                    <p><em>{{ cartItem['extraInfo'] }}</em></p>
+                                    <p><em>{{ cartItem['specialInstructions']}}</em></p>
                                 </div>
                             </div>
                             <div class="col-xs-12 col-lg-12 mx-auto my-auto">
-                                <p>
-                                    <input 
-                                    type="checkbox"
-                                    formControlName="selected"
-                                    (change)="updateSubtotal()">
-                                    &#8369;{{ cartItem['price'] }}
-                                </p>
+                                <input 
+                                class="itemCheckbox mr-2"
+                                [id]="i"
+                                type="checkbox"
+                                formControlName="selected"
+                                (change)="updateSubtotal()">
+                                <label [for]="i" class="price">
+                                    <strong>&#8369;{{ cartItem['price'] }}</strong>
+                                </label>
                             </div>
                             <div class="col-xs-12 col-lg-12 mx-auto mb-3">
                                 <label for="quantity">Quantity: </label>
@@ -63,8 +70,16 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-5 col-lg-4 order-summary mx-auto px-2 py-3 h-100 w-100">
-                    <p class="mb-0">Location</p>
-                    <p class="mb-4">Manila, Philippines</p>
+                    <p class="mb-1"><strong>Delivery and Billing:</strong></p>
+                    <p 
+                        class="mb-4">{{ address | titlecase }} 
+                        <a 
+                            class="ml-2" 
+                            (click)="onShowAddressForm()"
+                            style="color: rgb(0, 174, 255); cursor: pointer;">
+                            <em>Edit</em>
+                        </a>
+                    </p>
                     <hr class="mb-4">
                     <div class="row">
                         <div class="col-xs-12 ml-3 mb-3">
@@ -96,7 +111,7 @@
                     </div>
                 </div>
             </div>
-        </form>  
+        </form>
         </div> 
     </div>
 </div>
