--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,10 @@
                     </a>
                 </p>
             </div>
-            <app-delivery-details *ngIf="showDeliveryDetails"></app-delivery-details>
+            <app-delivery-details 
+                *ngIf="showDeliveryDetails" 
+                (close)="onClose($event)">
+            </app-delivery-details>
         </div>
     </div>
 </div>
