--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -10,7 +10,15 @@
                     (close)="onClose($event)">
                 </app-delivery-details>
             </div>
-        <form [formGroup]="cartForm" *ngIf="!showDeliveryDetails" class="pt-5 mt-5">
+        <form [formGroup]="cartForm" *ngIf="!showDeliveryDetails" class="pt-4 mt-5" (submit)="onSubmit()">
+            <div class="row">
+                <div class="col-xs-12 ml-3 pl-4">
+                    <label>
+                        <input type="checkbox" (change)="onSelectAll($event)">
+                        {{ selectAllText }}
+                    </label>
+                </div>
+            </div>
             <div class="row" [ngClass]="cartMargin">
                 <div class="col-xs-12 col-md-7 col-lg-8"> 
                     <div 
@@ -106,7 +114,12 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 w-100 mx-3">
-                            <button class="btn btn-warning form-control submit">PLACE ORDER</button>
+                            <button 
+                                class="btn btn-warning form-control submit" 
+                                type="submit"
+                                [disabled]="subtotal == 0 ? true : false">
+                                PROCEED TO CHECKOUT
+                            </button>
                         </div>
                     </div>
                 </div>
